give photo credit

--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
     </form>
 
     <img src="photos/halloween-woman-and-copyspace-1505817161VUH.jpg"
-    alt="woman_presenting_a_screen" width="710">
+    alt="woman_presenting_a_screen by Petr Kratochvil" width="710">
 
-    <img src="photos/couple-silhouette-16163318042gh.png" alt="a_couple_holding_hands"
+    <img src="photos/couple-silhouette-16163318042gh.png"
+     alt="a_couple_holding_hands by Annalise Batista"
     class="silhouette">
+    
 </body>
 </html>
