--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </li>
 
             <li>
-                <label for="confirm-pwd">Confirm password: </label>
+                <label for="confirm-pwd">Confirm pw: </label>
                 <span aria-label="required">*</span>
                 <input type="password" id="confirm-pwd" oninput="checkPasswords()">
             </li>
